[project]
name = "ld-process-ac3"
readme = "README.md"
requires-python = ">=3.7"
license = { "file" = "LICENSE" }
authors = [{ "name" = "Pieter P", "email" = "pieter.p.dev@outlook.com" }]
keywords = ["program", "binary", "executable", "decoder", "laserdisc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
urls = { "Documentation" = "https://tttapa.github.io/" }
dependencies = []
dynamic = ["version", "description"]

[build-system]
requires = ["py-build-cmake~=0.1.8"]
build-backend = "py_build_cmake.build"

#[tool.py-build-cmake.module]
#name = "minimal_program_module"
#directory = "src-python"


#[tool.py-build-cmake.module]
#name = "."
#directory = "."

[tool.py-build-cmake.sdist]
include = ["./*","../../cmake_modules/FindGetopt.cmake","decode/*", "demodulate/*", "../ld-process-efm/ezpwd/*"]

[tool.py-build-cmake.cmake]
minimum_version = "3.21"
build_type = "Release"
source_path = "."
build_args = ["-j"]
install_components = ["python_binaries"]
options = {"BUILD_PYTHON_WHEEL" = "On"}

